# ofi-chain-forensics-en

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
data/sample/: sample_blacklist.txt  sample_transactions.json
docs/: data_sources.md  methodology.md
examples/: basic_usage.py  generate_sample_data.py
ofi_chain_forensics/: __init__.py  cli.py  clustering.py  export.py  graph.py  patterns.py  risk_scoring.py
tests/: test_clustering.py  test_graph.py  test_patterns.py  test_risk_scoring.py
