[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofi-chain-forensics"
version = "0.1.0"
description = "Open-source library for blockchain fraud and money-laundering detection, through structural analysis of the transaction graph. Complementary module to Open Fraud Intelligence (OFI). English version."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ciprian-LocalPulse" }
]
keywords = [
    "blockchain", "cryptocurrency", "aml", "fraud-detection",
    "money-laundering", "forensics", "threat-intelligence", "open-source"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ofi-chain-forensics = "ofi_chain_forensics.cli:main"

[project.urls]
Homepage = "https://github.com/Ciprian-LocalPulse/ofi-chain-forensics"
"Bug Tracker" = "https://github.com/Ciprian-LocalPulse/ofi-chain-forensics/issues"
"Related project (OFI)" = "https://github.com/Ciprian-LocalPulse/open-fraud-intelligence"

[tool.setuptools.packages.find]
include = ["ofi_chain_forensics*"]
